--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <h6 class="text-indigo-600 text-sm font-bold uppercase mb-2">Hey What'sup !</h6>
                             <h3 class="mb-4 md:text-3xl md:leading-normal text-2xl leading-normal font-semibold">Iam <br> Muhammed Fuhad</h3>
 
-                            <p class="text-slate-400 max-w-xl">I'm a junior ethical hacker and a small tech influencer call "Mr Comet". I love to make videos, design websites and hack some websites.</p>
+                            <p class="text-slate-400 max-w-xl">I'm a junior ethical hacker and a small tech influencer called "Mr Comet". I love to make videos, design websites and hack some websites.</p>
 
                             <div class="mt-4">
                                 <div class="flex justify-between mb-2">
