--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <p class="text-slate-400 max-w-xl mx-auto">I'm always on the internet, feel free to contact me.</p>
                 
                     <div class="mt-6">
-                        <a href="www.instagram.com/mrcomet.techie/" class="btn bg-indigo-600 hover:bg-indigo-700 border-indigo-600 hover:border-indigo-700 text-white rounded-md me-2 mt-2"> Contact Me</a>
+                        <a href="https://www.instagram.com/mrcomet.techie/" class="btn bg-indigo-600 hover:bg-indigo-700 border-indigo-600 hover:border-indigo-700 text-white rounded-md me-2 mt-2"> Contact Me</a>
                     </div>
                 </div><!--end grid-->
             </div><!--end container-->
