--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <p class="text-slate-400 max-w-xl mx-auto">See my latest youtube videos here, don't forget to subscribe !</p>
                 
                     <div class="video-wrapper">
-                        <iframe class="responsive-iframe" width="600" height="340" src="https://youtu.be/LpBHFC9IKe4" frameborder="0" allowfullscreen></iframe> 
+                        <iframe class="responsive-iframe" width="560" height="315" src="https://www.youtube.com/embed/LpBHFC9IKe4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div><!--end grid-->
 
