--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <p class="text-slate-400 max-w-xl mx-auto">See my latest youtube videos here, don't forget to subscribe !</p>
                 
                     <div class="video-wrapper">
-                        <iframe class="responsive-iframe" width="560" height="315" src="https://www.youtube.com/embed/LpBHFC9IKe4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe loading="lazy" class="responsive-iframe" width="560" height="315" src="https://www.youtube.com/embed/LpBHFC9IKe4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div><!--end grid-->
 
