added search console meta

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="keywords" content="Muhammed Fuhad,Fuhad,Mr Comet,ethical hacker,youtuber">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="google-site-verification" content="wOWXu_ogJOe_dN18wHROdOejZ5P148B5Qzys5i6ABeA" />
 
         <!-- favicon -->
         <link rel="icon" href="favicon.jpg">
